fix tests and remove insert handler
