# docs/specs/swagger.yaml
@@ -47,59 +47,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-    post:
-      tags:
-        - Order
-      description: Create order
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              properties:
-                id:
-                  type: integer
-                number:
-                  type: string
-                created_date:
-                  type: string
-                  example: "YYYY-MM-DDTHH:MM:SSZ"
-                items:
-                  type: array
-                  items:
-                    $ref: '#/components/schemas/Item'
-              required:
-                - id
-                - number
-                - created_date
-                - items
-      responses:
-        '201':
-          description: Created
-        '400':
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '424':
-          description: Failed dependency
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '500':
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-
   /order/{orderId}/status:
     put:
       tags:
         - Order
-      description: Create order
+      description: Change order status
       parameters:
         - in: path
           name: orderId
@@ -115,7 +67,7 @@ paths:
               properties:
                 status:
                   type: string
-                  enum: [received, in_prepare, done, finished]
+                  enum: [RECEBIDO, EM_PREPARO, FINALIZADO, ENTREGUE]
               required:
                 - status
       responses:
@@ -150,7 +102,7 @@ components:
           type: string
         status:
           type: string
-          enum: [pending, received, in_prepare, done, finished]
+          enum: [PENDENTE, RECEBIDO, EM_PREPARO, FINALIZADO, ENTREGUE]
         created_date:
           type: string
           example: "YYYY-MM-DDTHH:MM:SSZ"
